--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Description: 
+ * @Version: 2.0
+ * @Autor: Seven
+ * @Date: 2021-05-25 12:50:29
+ * @LastEditors: Seven
+ * @LastEditTime: 2021-05-25 15:00:48
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>樱桃找房</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
