--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
  * @Autor: Seven
  * @Date: 2021-05-25 12:50:29
  * @LastEditors: Seven
- * @LastEditTime: 2021-05-25 15:00:48
+ * @LastEditTime: 2021-05-30 16:51:39
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -32,6 +32,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- //引入百度地图Apijs -->
+    <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=ryV7saP0mm0V2HrIDiiO1u7APrI1ytFi"></script>
+ 
     <title>樱桃找房</title>
   </head>
   <body>
